[package]
name = "tracing-subscriber-fmt-tree"
version = "0.1.0"
authors = ["Wim Looman <tracing-subscriber-fmt-tree.crate@nemo157.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = { version = "0.12.1", default-features = false }
fehler = { version = "1.0.0", default-features = false }
indent_write = { git = "https://github.com/Nemo157/indent-write", branch = "skip-indent", default-features = false }
once_cell = { version = "1.5.2", default-features = false, features = ["std"] }
tracing-core = { version = "0.1.17", default-features = false }
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["fmt"] }
